--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "aws-amplify": "^3.4.3",
+    "aws-amplify-angular": "^6.0.26",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -27,8 +29,10 @@
     "@angular-devkit/build-angular": "^13.3.7",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/graphql": "^14.5.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "graphql": "^15.8.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
