--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,22 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowJs": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
@@ -19,7 +34,7 @@
     "target": "es2017",
     "module": "es2020",
     "lib": [
-      "es2020",
+      "esnext",
       "dom"
     ]
   },
